Fix X axis cursor value for epoch alignment (#266)
* Fix X axis cursor value for epoch alignment

* Fix issue with x axis cursor epoch value

--- a/client/src/screens/hub/HubMainScreen/components/Panel/components/PanelChart/PanelChart.less
+++ b/client/src/screens/hub/HubMainScreen/components/Panel/components/PanelChart/PanelChart.less
@@ -242,7 +242,7 @@
   background-color: var(--primary-bg);
   border: 1px solid var(--primary-light);
   color: var(--primary-dark);
-  font-size: var(--text-xs);
+  font-size: var(--text-xxs);
   font-weight: normal;
   white-space: nowrap;
 
